Fix character not responsive in mobile

--- a/client/src/componenets/AllCharacters.module.css
+++ b/client/src/componenets/AllCharacters.module.css
@@ -15,6 +15,7 @@
 @media only screen and (max-width: 600px) {
     .grid {
         grid-template-columns: repeat(1, 1fr);
-        width: 50%;
+        width: 75%;
+        margin: auto;
     }
 }
